--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello from Vercel</title>
+    <title>Dependabot-auto-merger</title>
   </head>
   <body>
-    <h1>Hello from Vercel</h1>
-
-    <p>Edit this file in <code>public/index.html</code></p>
+    <h1>Dependabot-auto-merger</h1>
 
     <p>
-      Your app receives webhook requests at
-      <code>POST /api/github/webhooks</code>
+      You can find more information about the bot here: </br>
+      <a href="https://github.com/apps/dependabot-auto-merger"
+        >Dependabot-auto-merger</a
+      >
     </p>
   </body>
 </html>
